--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "caesar-salad": "^2.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.8",
     "nodemon": "^3.0.1",
